--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "@ricky0123/vad-web": "^0.0.24",
+        "wavesurfer.js": "^7.10.1"
     }
 }
