chore: add defaults for reverb vars

--- a/.env.example
+++ b/.env.example
@@ -68,10 +68,10 @@ OPEN_AI_WHISPER_API_KEY=
 
 OCTANE_SERVER=frankenphp
 
-REVERB_APP_ID=
-REVERB_APP_KEY=
-REVERB_APP_SECRET=
-REVERB_HOST=
+REVERB_APP_ID="254157"
+REVERB_APP_KEY="aDummyKeyForDevelopmentPurposes"
+REVERB_APP_SECRET="aDummySecretForDevelopmentPurposes"
+REVERB_HOST="localhost"
 REVERB_PORT=8080
 REVERB_SCHEME=http
 
