chore: fix code style and update phpstan config

--- a/composer.json
+++ b/composer.json
@@ -62,10 +62,7 @@
             "@php artisan test"
         ],
         "phpstan": [
-            "vendor/bin/phpstan analyse"
-        ],
-        "phpstan-baseline": [
-            "vendor/bin/phpstan analyse --generate-baseline"
+            "vendor/bin/phpstan --memory-limit=512M"
         ],
         "pint": [
             "vendor/bin/pint"
