--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,10 +1,10 @@
-includes:
-    - vendor/larastan/larastan/extension.neon
-
 parameters:
 
     paths:
-        - app/
+        - app
+        - tests
 
     # Level 9 is the highest level
-    level: 5
+    level: 7
+
+    tmpDir: .phpstan.cache
