refactor: move chunk time into .env

--- a/.env.example
+++ b/.env.example
@@ -79,3 +79,4 @@ VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
 VITE_REVERB_HOST="localhost"
 VITE_REVERB_PORT="${REVERB_PORT}"
 VITE_REVERB_SCHEME="${REVERB_SCHEME}"
+VITE_MAX_CHUNK_DURATION=15000
