chore: update readme.md

--- a/.env.example
+++ b/.env.example
@@ -68,7 +68,7 @@ OPEN_AI_WHISPER_API_KEY=
 
 OCTANE_SERVER=frankenphp
 
-REVERB_APP_ID="254157"
+REVERB_APP_ID=123654
 REVERB_APP_KEY="aDummyKeyForDevelopmentPurposes"
 REVERB_APP_SECRET="aDummySecretForDevelopmentPurposes"
 REVERB_HOST="localhost"
