--- a/.env.example
+++ b/.env.example
@@ -80,3 +80,4 @@ VITE_REVERB_HOST="localhost"
 VITE_REVERB_PORT="${REVERB_PORT}"
 VITE_REVERB_SCHEME="${REVERB_SCHEME}"
 VITE_MAX_CHUNK_DURATION=15000
+VITE_APP_URL=
